# OurNovelReader

./: BookModel.qml  BookShelf.qml  BottomMenu.qml  BrightBoard.qml  BrightnessControl.java  CMakeLists.txt  ContentBoard.qml  CoverPage.qml  Develop log.md  FontBoard.qml  Icon.qml  Info.qml  InitTxt.qrc  ListenMainPage.qml  MacroSet.h  Main.qml  Navigator.qml  NoteBoard.qml  NovelReader.qml  PageManager.qml  ProgressBoard.qml  README.md  Read.qml  ReadControl.qml  ScrollStyle.qml  Search.qml  Shelf.qml  ShelfMainPage.qml  TopMenu.qml  User.qml  UserMainPage.qml  androidpermission.cpp  androidpermission.h  booklistmanager.cpp  booklistmanager.h  bookmanager.cpp  bookmanager.h  bookselector.cpp  bookselector.h  configmanager.cpp  (+17 more)
doc/: ActivityView.mdj  StaticView.mdj
testFile/: 武动乾坤.txt
